grafana-enterprise/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-enterprise
  namespace: grafana-enterprise
spec:
  selector:
    app: grafana-enterprise
  ports:
    - name: 3000
      protocol: TCP
      port: 5432
    - name: gossip
      protocol: TCP
      port: 9094
