grafana-enterprise/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: grafana-enterprise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: prometheus
          image: index.docker.io/prom/prometheus:v2.24.1
          command: ['prometheus']
          args:
            - "--config.file=/tmp/prometheus.yml"
            - "--storage.tsdb.path=/data"
          volumeMounts:
            - name: data
              mountPath: /data
            - name: prometheus-config
              mountPath: /tmp/prometheus.yml
              subPath: prometheus.yml
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: grafana-enterprise
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: grafana-enterprise
spec:
  tls:
  - hosts:
      - prometheus.lab.home
    secretName: prometheus-tls
  rules:
  - host: prometheus.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
